deploy/hans-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
spec:
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      nodeSelector:
        hostname: tsmchack2023-gce-grp5-2
      containers:
      - name: storage
        image: eddielin0926/hans-storage
        ports:
        - containerPort: 8300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      nodeSelector:
        hostname: tsmchack2023-gce-grp5-3
      containers:
      - name: inventory
        image: eddielin0926/hans-inventory
        ports:
        - containerPort: 8200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business
spec:
  selector:
    matchLabels:
      app: business
  template:
    metadata:
      labels:
        app: business
    spec:
      nodeSelector:
        hostname: tsmchack2023-gce-grp5-3
      containers:
      - name: business
        image: eddielin0926/hans-business
        ports:
        - containerPort: 8100
