deploy/hans-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: NodePort
  selector:
    app: database
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30110
---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage
  ports:
  - port: 8300
    targetPort: 8300
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
  - port: 8200
    targetPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: business-service
spec:
  type: NodePort
  selector:
    app: business
  ports:
  - port: 8100
    targetPort: 8100
    nodePort: 30100
