deploy/hans-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hans-ingress
  labels:
    name: hans-ingress
spec:
  rules:
  - host: 10.0.0.3
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hans-business
            port: 
              number: 8100
